testdata/baselines/reference/compiler/errorInUnnamedClassExpression.errors.txt
errorInUnnamedClassExpression.tlua(3,13): error TS2304: Cannot find name 'class'.
errorInUnnamedClassExpression.tlua(3,19): error TS1005: ';' expected.
errorInUnnamedClassExpression.tlua(4,5): error TS2304: Cannot find name 'constructor'.
errorInUnnamedClassExpression.tlua(4,19): error TS1005: ';' expected.
errorInUnnamedClassExpression.tlua(5,9): error TS1128: Declaration or statement expected.
errorInUnnamedClassExpression.tlua(5,13): error TS1128: Declaration or statement expected.
errorInUnnamedClassExpression.tlua(5,14): error TS2304: Cannot find name 'bar'.
errorInUnnamedClassExpression.tlua(5,20): error TS1109: Expression expected.
errorInUnnamedClassExpression.tlua(5,24): error TS1128: Declaration or statement expected.
errorInUnnamedClassExpression.tlua(5,25): error TS2304: Cannot find name 'bar'.
errorInUnnamedClassExpression.tlua(7,5): error TS1434: Unexpected keyword or identifier.
errorInUnnamedClassExpression.tlua(7,5): error TS2304: Cannot find name 'abstract'.
errorInUnnamedClassExpression.tlua(7,14): error TS2304: Cannot find name 'bar'.


==== errorInUnnamedClassExpression.tlua (13 errors) ====
    // https://github.com/microsoft/TypeScript/issues/62920
    
    local Foo = class {
                ~~~~~
!!! error TS2304: Cannot find name 'class'.
                      ~
!!! error TS1005: ';' expected.
        constructor() {
        ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'constructor'.
                      ~
!!! error TS1005: ';' expected.
            this.bar = this.bar + 1;
            ~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS1128: Declaration or statement expected.
                 ~~~
!!! error TS2304: Cannot find name 'bar'.
                       ~~~~
!!! error TS1109: Expression expected.
                           ~
!!! error TS1128: Declaration or statement expected.
                            ~~~
!!! error TS2304: Cannot find name 'bar'.
        }
        abstract bar;
        ~~~~~~~~
!!! error TS1434: Unexpected keyword or identifier.
        ~~~~~~~~
!!! error TS2304: Cannot find name 'abstract'.
                 ~~~
!!! error TS2304: Cannot find name 'bar'.
    };
    